# mediavault

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .fastapicloudignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 373e8004aa71_create_tables.py  7e046da67c80_create_initial_tables.py  92502d06772a_create_initial_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: jwt.py
backend/app/database/: config.py  database.py  dependencies.py
backend/app/models/: __init__.py  entry.py  media.py  user.py
backend/app/routers/: entries.py  search.py  users.py
backend/app/schemas/: entry.py  media.py  user.py
backend/app/services/: entries.py  search.py  users.py
backend/app/static/: index.html
backend/app/static/assets/: index-BLHJLVRB.js  index-BSVOwmQU.js  index-CJFBbiaI.js  index-Cfmo-gjF.css  index-aK0JiqD2.js  index-f06XB_pD.css
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/layout/: Navbar.tsx  RatingDialog.tsx  SearchSheet.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx  Search.tsx
