[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.139.0",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
]

[tool.fastapi]
entrypoint = "app.main:app"
